; ModuleID = '/home/carl/AnghaBench/freebsd/sys/cam/extr_cam_periph.c_cam_periph_release_locked.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/cam/extr_cam_periph.c_cam_periph_release_locked.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cam_periph = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cam_periph_release_locked(%struct.cam_periph* %0) #0 {
  %2 = alloca %struct.cam_periph*, align 8
  store %struct.cam_periph* %0, %struct.cam_periph** %2, align 8
  %3 = load %struct.cam_periph*, %struct.cam_periph** %2, align 8
  %4 = icmp eq %struct.cam_periph* %3, null
  br i1 %4, label %5, label %6

5:                                                ; preds = %1
  br label %11

6:                                                ; preds = %1
  %7 = call i32 (...) @xpt_lock_buses()
  %8 = load %struct.cam_periph*, %struct.cam_periph** %2, align 8
  %9 = call i32 @cam_periph_release_locked_buses(%struct.cam_periph* %8)
  %10 = call i32 (...) @xpt_unlock_buses()
  br label %11

11:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32 @xpt_lock_buses(...) #1

declare dso_local i32 @cam_periph_release_locked_buses(%struct.cam_periph*) #1

declare dso_local i32 @xpt_unlock_buses(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
